[package]
name = "esp32-image-composer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
esp-idf-part = "0.6.0"
glob = "0.3.3"
indicatif = "0.18.3"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
